--- a/css/style.css
+++ b/css/style.css
@@ -1,211 +1,263 @@
-/** Main declarations */
+/* :::: COULEURS :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 :root {
     --default-margin: 20px;
     --default-margin-: -20px;
     --primary-color: #246EF0;
     --primary-color-dark: #133B80;
+    --dark-white: #f5f5f5;    
+    --back-gray: #eeeeee;    
     --light-gray: #888;
-    --dark-white:#f6f6f6;
-    --green: #6d9b01;
-}
+    --dark-gray: #474747;
+    --green: #418600;
+    --fontXXS: .9375rem;  /* 15px */
+    --fontXS: 1rem;  /* 16px */
+    --fontS: 1.125rem;  /* 18px */
+    --fontM: 1.25rem;  /* 20px */
+    --fontL: 1.5rem;  /* 24px */
+    --fontXL: 1.75rem;  /* 28px */
+    --fontXXL: 3rem;  /* 48px */
 
-@font-face {
-    font-family: 'agencyFb';
-    src: url('../assets/fonts/agencyfb_reg.ttf') format('truetype');
 }
+/* ---- CLASSES GENERALES -------------------------------------------------- */
 
-@font-face {
-    font-family: 'agencyFbB';
-    src: url('../assets/fonts/agencyfb_bold.ttf') format('truetype');
-}
-
-body {
-    margin: 0;
-    height: 100vh;
-    font-family: 'agencyFbB', sans-serif;
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: column;
-}
-
-h1,
-h2,
-h3,
-p {
-    margin: 0;
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    list-style: none;
-}
-
-header,
-main {
-    position: relative;
-    max-width: 700px;
-    margin: auto;
-}
-
-header>img {
-    width: 100%;
-}
-
-header nav {
-    padding: 10px;
-    align-self: start;
-}
-
-header nav img {
-    height: 1em;
-}
-
-header #banner {
-    position: absolute;
-    inset: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    font-size: 2rem;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-main {
-    flex: 1;
-    display: flex;
-    gap: var(--default-margin);
-    flex-direction: column;
-    padding: var(--default-margin);
-    align-items: center;
-    position: relative;
-    z-index: 1;
-    margin-top: var(--default-margin-);
-    border-radius: var(--default-margin) var(--default-margin) 0 0;
-    background-color: var(--dark-white);
-}
-
-#search-panel {
-    display: flex;
-    flex-direction: column;
+div.whiteWindow{
     background-color: white;
-
+    border-radius: 5px;                    
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
 
-.shadow {
-    border-radius: 5px;
-    box-shadow: 5px 5px 20px #AAA;
-}
 
-.evaluate {
-    color: var(--light-gray);
-}
+/* ::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 
-#search-panel label {
-    color: var(--green);
+html{        
+    font-family: "Baloo 2", sans-serif;
+    font-size: var(--fontXS);
 }
-
-input {
-    background-color: #FFFF;
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    font-size: 2rem;
-    width: 95%;
-    border-bottom: 2px solid transparent; 
-}
-input:focus{
-    outline: none;
-    border-bottom: 2px solid var(--green);    
-}
-
-ul#listeDepart, ul#listeArrivee{
-    width: 96%;
-    li{
-
-    }
-    li:hover{
-        background-color: var(--dark-white);
-        cursor: pointer;
+body{   
+    width: 100%;
+    height: 100%;
+    div.background{        
+        margin: 0 auto;  
+        width: 100%;
+        max-width: 360px;
+        height: 280px; 
+        background-image: url("../assets/images/back.png");
+        background-repeat: no-repeat;
+        background-position: center top;
+        background-size: cover;
     }
 }
-
-.search {
-    display: flex;
-    justify-content: space-between;
-    margin: var(--default-margin);
+header{
+    z-index: 10;
+    position: fixed;
+    top:0;
+    width: 100%;
+    nav{
+        i.iconBurger button{            
+            display: block;
+            cursor: pointer;
+            width: 32px;
+            height: 32px;
+            margin: 15px 0 0 15px;        
+            background-image: url("../assets/images/burger.svg");            
+            background-size: cover;
+            background-color: transparent;
+            border: none;         
+        }
+        ul#navList{
+            display: none;        
+        }
+    }    
+    nav.open{        
+        width: 100%;
+        i.iconBurger button{       
+            background-image: url("../assets/images/close.svg"); 
+        }
+        ul#navList{
+            display: block;
+            background-color: white;
+            width: 100%;
+            li {
+                list-style: none;
+                a{
+                    /*color: white;*/
+                    text-decoration: none;
+                    
+                }
+            }
+        }
+    }
 }
 
-.search>div {
-    display: flex;
-    flex-direction: column;
-}
 
-.separator {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    background-color: #444444;
-    height: 2px;
-}
 
-.separator p {
+
+
+
+main{        
     position: absolute;
-    align-self: center;
-    background-color: #444444;
-    color: white;
-    padding: 5px 30px;
-    border-radius: 30px;
-}
+    top: 0;
+    display: block;
+    height: 100%;    
+    width: 100%;    
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+    h1{            
+        text-align: center;
+        margin: 0;
+        font-size: var(--fontXXL);
+        line-height: var(--fontXXL);
+        display: block;        
+        color:white;
+        padding-top: 10vh ;
+    }
+    section#mainSection{
+        height: 100%;
+        width: 100%;
+        div#searchWindow{                   
+            position: absolute;                                    
+            height: 65%;                 
+            width: 100%;            
+            max-width: 360px;
+            margin-left: calc(50% - 180px);
+            bottom: 0;
+            display: block;
+            background-color: var(--back-gray) ;
+            border-radius: 20px 20px 0 0 ;       
+            h2{                
+                font-size: var(--fontXL);
+                text-align: center;
+                margin: 15px 0 15px;
+            }     
+            form{                                               
+                padding: 0 20px 10px;
+                div#trajet{
+                    padding: 0;
+                    width: 100%;
+                    margin: 0 auto;
+                    max-width: 360px;
+                    position: relative;
+                    >div{                        
+                        width: 100%;                                         
+                        padding: 20px;                               
+                        display: flex;
+                        flex-direction:row;                        
+                        >div{         
+                            width: 100%;      
+                            position: relative;             
+                            display: flex;
+                            flex-direction: column;
+                            label{                                
+                                color: var(--green) ;
+                                font-size: var(--fontXS);
+                                font-weight: 600;
+                            }
+                            input{
+                                color: var(--dark-gray);
+                                /* background-color: var(--back-gray); */
+                                border: none;
+                                font-size: var(--fontM);
+                                height: 30px;
+                                width: 95%;
+                                border-bottom: 2px solid var(--back-gray); 
+                            }                            
+                            input:focus{
+                                outline: none;
+                                border-bottom: 2px solid var(--green);    
+                            }
+                            input#villeDepart, input#villeArrivee{                                                                                                
+                                font-weight: 600;
+                                width: 90%;
+                            }
+                            ul#listeDepart, ul#listeArrivee{
+                                display: none;
+                                position: absolute; 
+                                z-index: 2;
+                                box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+                                top:29px;
+                                background-color: white;
+                                padding-left: 0;
+                                
+                                width: calc(90% - 17px);
+                                li{
+                                    padding: 10px 10px;
+                                    list-style: none;
+                                    font-size:  var(--fontS);
+                                }
+                                li:hover{
+                                    background-color: var(--dark-white);
+                                    color: var(--green);
+                                    cursor: pointer;
+                                }
+                            }
+                        }
+                        >div:first-child{                            
+                            width: 75%;
+                        }
+                        >div:last-child{                            
+                            width: 25%;
+                        }
+                    }                        
+                    div#Depart{
+                        border-bottom: 1px solid var(--dark-gray);
+                        width: calc(100% - 40px);                        
+                        padding-bottom: 30px;
+                    }                    
+                    div#Duree{
+                        position: absolute;          
+                        font-size: var(--fontS);
+                        display: inline;              
+                        padding: 5px 0 5px;
+                        top: calc(50% - 15px);
+                        left: 33%;
+                        text-align: center;
+                        height: 20px;
+                        width: 34%;                        
+                        border-radius: 50px;                        
+                        background-color:  var(--dark-gray);
+                        color: white;
+                        font-weight: 600;
+                    }
+                    div#Arrivee{
+                        width: calc(100% - 40px);
+                        padding-bottom: 30px;
+                    }
+                }
+                div#jours{
+                    padding: 10px;
+                    margin-top: 20px;
+                    display: flex;
+                    justify-content: space-between;  
+                    input[type="checkbox"]{
+                        display: none;
+                    }
+                    input[type="checkbox"] + label {
+                        cursor: pointer;
+                        border-bottom: 1px solid;
+                        font-size:  var(--fontM);                        
+                        color: var(--dark-gray);    
+                        font-weight: 500;
 
-.search-loc {
-    flex: 3;
-}
+                    }
+                    input[type="checkbox"]:checked + label {
+                        color: var(--primary-color);                        
+                    }                
+                }
+                button.search{
+                    margin-top: 20px;
+                    width: 100%;
+                    height: 44px;                    
+                    border: 0;
+                    border-radius: 22px;                                                                            
+                    background-color: var(--primary-color);
+                    letter-spacing: .02em;
+                    color: white;
+                    font-size: var(--fontXL);
+                    line-height: 1.5;
+                    box-shadow: 0 3px 2px 0 var(--primary-color-dark);
+                }
 
-.search-time {
-    flex: 1;
-}
-
-.search-time input {
-    font-family: 'agencyFb', sans-serif;
-}
-
-#search-days {
-    width: 100%;
-}
-
-#search-days ul {
-    display: flex;
-}
-
-#search-days li {
-    flex: 1;
-    text-align: center;
-}
-
-#search-days li a {
-    display: inline-block;
-    width: 100%;
-    padding: 10px 0;
-    color: var(--light-gray);
-}
-
-#search-days li a.active {
-    color: var(--primary-color);
-}
-
-.cta_butt {
-    background-color: var(--primary-color);
-    color: white;
-    width: 100%;
-    padding: 10px;
-    font-family: 'agencyFb';
-    font-size: 1.25em;
-    border-radius: 1.25em;
-    border: none;
-    box-shadow: 5px 5px 0 var(--primary-color-dark);
+            }
+        }
+    }
 }
